--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- 1.3 - UL - LISTA -->
         <a href=# class="logo">
           <!-- IMAGEN DEL MENU -->
-          <img src="/2 - IMAGENES/Leandro.jpg" alt="Foto de Leandro"
+          <img src="" alt="Foto de Leandro"
           width="40px">
           <!-- NOMBRE DE LA PAGINA O MINI DESCRIPCION-->
           <div class="conteudo">
