--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 2 - CSS  Agg el link que nos direcciona a los css para la pagina-->
-    <link rel="stylesheet" type="text/css" href="./Style.css">
+    <link rel="stylesheet" type="text/css" href="/General.css">
     <link rel="stylesheet" type="text/css" href="./normalize.css">
     <link rel="stylesheet" type="text/css" href="./Navegacion.css">
     <!-- 3 - Usamos google fonts para buscar una letra y tamaños y lo colocamos con un link e agregamos a css-->
