--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 2 - CSS  Agg el link que nos direcciona a los css para la pagina-->
-    <link rel="stylesheet" type="text/css" href="/General.css">
+    <link rel="stylesheet" type="text/css" href="./General.css">
     <link rel="stylesheet" type="text/css" href="./normalize.css">
     <link rel="stylesheet" type="text/css" href="./Navegacion.css">
+    <link rel="stylesheet" type="text/css" href="./Principal.css">
     <!-- 3 - Usamos google fonts para buscar una letra y tamaños y lo colocamos con un link e agregamos a css-->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
     <!-- Agg el javacript del menu-->
